Update return status
